############################
testrepository release notes
############################

NEXT (In development)
+++++++++++++++++++++

0.0.14
++++++

IMPROVEMENTS
------------

* First cut at full Python 3 support. The 'works for me' release.
  (Robert Collins)

0.0.13
++++++

IMPROVEMENTS
------------

* ``setup.py testr`` was not indicating test failures via it's return code.
  (Monty Taylor)

0.0.12
++++++

IMPROVEMENTS
------------

* There is now a setuptools extension provided by ``testrespository`` making it
  easy to invoke testr from setup.py driven workflows.
  (Monty Taylor, Robert Collins)

INTERNALS
---------

* BSD license file incorrectly claimed copyright by subunit contributors.
  (Monty Taylor)

* .testr.conf is now shipped in the source distribution to aid folk wanting to
  validate that testrepository works correctly on their machine.
  (Robert Collins)

0.0.11
++++++

IMPROVEMENTS
------------

* Fix another incompatability with Mac OS X - gdbm dbm modules don't support
  get. (Robert Collins, #1094330)

0.0.10
++++++

IMPROVEMENTS
------------

* It's now possible to configure ``test_run_concurrency`` in ``.testr.conf``
  to have concurrency defined by a callout. (Robert Collins)

* Testr supports running tests in arbitrary environments. See ``Remote or
  isolated test environments`` in MANUAL.txt / ``testr help run``
  (Robert Collins)

INTERNALS
---------

* TestCommand is now a fixture. This is used to ensure cached test instances
  are disposed of - if using the object to run or list tests, you will need
  to adjust your calls. (Robert Collins)

* ``TestCommand`` now offers, and ``TestListingFixture`` consumes a small
  protocol for obtaining and releasing test execution instances.
  (Robert Collins)

0.0.9
+++++

IMPROVEMENTS
------------

* On OSX the ``anydbm`` module by default returns an implementation that
  doesn't support update(). Workaround that by falling back to a loop.
  (Robert Collins, #1091500)
