@@ -14,14 +14,18 @@
 
 """Tests for the run command."""
 
+from io import BytesIO
 import os.path
 from subprocess import PIPE
 import tempfile
 
+from extras import try_import
 from fixtures import (
     Fixture,
     MonkeyPatch,
     )
+import subunit
+v2_avail = try_import('subunit.ByteStreamToStreamResult')
 from subunit import RemotedTestCase
 from testscenarios.scenarios import multiply_scenarios
 from testtools.compat import _b
@@ -294,8 +298,16 @@ class TestCommand(ResourcedTestCase):
             cmd.repository_factory.repos[ui.here].get_test_run(1)._partial)
 
     def test_load_failure_exposed(self):
+        if v2_avail:
+            buffer = BytesIO()
+            stream = subunit.StreamResultToBytes(buffer)
+            stream.status(test_id='foo', test_status='inprogress')
+            stream.status(test_id='foo', test_status='fail')
+            subunit_bytes = buffer.getvalue()
+        else:
+            subunit_bytes = b'test: foo\nfailure: foo\n'
         ui, cmd = self.get_test_ui_and_cmd(options=[('quiet', True),],
-            proc_outputs=[_b('test: foo\nfailure: foo\n')])
+            proc_outputs=[subunit_bytes])
         cmd.repository_factory = memory.RepositoryFactory()
         self.setup_repo(cmd, ui)
         self.set_config('[DEFAULT]\ntest_command=foo\n')
@@ -304,8 +316,16 @@ class TestCommand(ResourcedTestCase):
         self.assertEqual(1, result)
 
     def test_process_exit_code_nonzero_causes_synthetic_error_test(self):
+        if v2_avail:
+            buffer = BytesIO()
+            stream = subunit.StreamResultToBytes(buffer)
+            stream.status(test_id='foo', test_status='inprogress')
+            stream.status(test_id='foo', test_status='success')
+            subunit_bytes = buffer.getvalue()
+        else:
+            subunit_bytes = b'test: foo\nsuccess: foo\n'
         ui, cmd = self.get_test_ui_and_cmd(options=[('quiet', True),],
-            proc_outputs=[_b('test: foo\nsuccess: foo\n')],
+            proc_outputs=[subunit_bytes],
             proc_results=[2])
             # 2 is non-zero, and non-zero triggers the behaviour of exiting
             # with 1 - but we want to see that it doesn't pass-through the
@@ -316,10 +336,8 @@ class TestCommand(ResourcedTestCase):
         result = cmd.execute()
         self.assertEqual(1, result)
         run = cmd.repository_factory.repos[ui.here].get_test_run(1)
-        self.assertEqual([
-            Wildcard,
-            ('Error', RemotedTestCase('process-returncode'), Wildcard)],
-            run._outcomes)
+        self.assertEqual([Wildcard, 'Failure'],
+            [outcome[0] for outcome in run._outcomes])
 
     def test_regex_test_filter(self):
         ui, cmd = self.get_test_ui_and_cmd(args=('ab.*cd', '--', 'bar', 'quux'))
@@ -372,10 +390,25 @@ class TestCommand(ResourcedTestCase):
 
     def test_until_failure(self):
         ui, cmd = self.get_test_ui_and_cmd(options=[('until_failure', True)])
+        if v2_avail:
+            buffer = BytesIO()
+            stream = subunit.StreamResultToBytes(buffer)
+            stream.status(test_id='foo', test_status='inprogress')
+            stream.status(test_id='foo', test_status='success')
+            subunit_bytes1 = buffer.getvalue()
+            buffer.seek(0)
+            buffer.truncate()
+            stream.status(test_id='foo', test_status='inprogress')
+            stream.status(test_id='foo', test_status='fail')
+            subunit_bytes2 = buffer.getvalue()
+        else:
+            subunit_bytes1 = b'test: foo\nsuccess: foo\n'
+            subunit_bytes2 = b'test: foo\nfailure: foo\n'
         ui.proc_outputs = [
-            _b('test: foo\nsuccess: foo\n'), # stream one, works
-            _b('test: foo\nfailure: foo\n') # stream two, fails
+            subunit_bytes1, # stream one, works
+            subunit_bytes2, # stream two, fails
             ]
+        ui.require_proc_stdout = True
         cmd.repository_factory = memory.RepositoryFactory()
         self.setup_repo(cmd, ui)
         self.set_config(
@@ -465,7 +498,15 @@ class TestReturnCodeToSubunit(ResourcedTestCase):
         proc.returncode = 1
         stream = run.ReturnCodeToSubunit(proc)
         content = accumulate(stream, self.reader)
-        self.assertEqual(
-            _b('foo\nbar\ntest: process-returncode\n'
-            'error: process-returncode [\n returncode 1\n]\n'),
-            content)
+        if v2_avail:
+            buffer = BytesIO()
+            buffer.write(b'foo\nbar\n')
+            stream = subunit.StreamResultToBytes(buffer)
+            stream.status(test_id='process-returncode', test_status='fail',
+                file_name='traceback', mime_type='test/plain;charset=utf8',
+                file_bytes=b'returncode 1')
+            expected_content = buffer.getvalue()
+        else:
+            expected_content = _b('foo\nbar\ntest: process-returncode\n'
+                'failure: process-returncode [\n returncode 1\n]\n')
+        self.assertEqual(expected_content, content)
