@@ -14,10 +14,14 @@
 
 """Tests for the testcommand module."""
 
+from io import BytesIO
 import os.path
 import optparse
 import re
 
+from extras import try_import
+import subunit
+v2_avail = try_import('subunit.ByteStreamToStreamResult')
 from testtools.compat import _b
 from testtools.matchers import (
     Equals,
@@ -181,7 +185,15 @@ class TestTestCommand(ResourcedTestCase):
 
     def test_get_run_command_default_and_list_expands(self):
         ui, command = self.get_test_ui_and_cmd()
-        ui.proc_outputs = [_b('returned\nids\n')]
+        if v2_avail:
+            buffer = BytesIO()
+            stream = subunit.StreamResultToBytes(buffer)
+            stream.status(test_id='returned', test_status='exists')
+            stream.status(test_id='ids', test_status='exists')
+            subunit_bytes = buffer.getvalue()
+        else:
+            subunit_bytes = _b('returned\nids\n')
+        ui.proc_outputs = [subunit_bytes]
         ui.options = optparse.Values()
         ui.options.parallel = True
         ui.options.concurrency = 2
@@ -283,8 +295,16 @@ class TestTestCommand(ResourcedTestCase):
         self.assertEqual(expected_cmd, fixture.list_cmd)
 
     def test_list_tests_parsing(self):
+        if v2_avail:
+            buffer = BytesIO()
+            stream = subunit.StreamResultToBytes(buffer)
+            stream.status(test_id='returned', test_status='exists')
+            stream.status(test_id='ids', test_status='exists')
+            subunit_bytes = buffer.getvalue()
+        else:
+            subunit_bytes = _b('returned\nids\n')
         ui, command = self.get_test_ui_and_cmd()
-        ui.proc_outputs = [_b('returned\nids\n')]
+        ui.proc_outputs = [subunit_bytes]
         self.set_config(
             '[DEFAULT]\ntest_command=foo $LISTOPT $IDLIST\ntest_id_list_default=whoo yea\n'
             'test_list_option=--list\n')
@@ -515,8 +535,16 @@ class TestTestCommand(ResourcedTestCase):
             log._events)
 
     def test_filter_tests_by_regex_only(self):
+        if v2_avail:
+            buffer = BytesIO()
+            stream = subunit.StreamResultToBytes(buffer)
+            stream.status(test_id='returned', test_status='exists')
+            stream.status(test_id='ids', test_status='exists')
+            subunit_bytes = buffer.getvalue()
+        else:
+            subunit_bytes = _b('returned\nids\n')
         ui, command = self.get_test_ui_and_cmd()
-        ui.proc_outputs = [_b('returned\nids\n')]
+        ui.proc_outputs = [subunit_bytes]
         self.set_config(
             '[DEFAULT]\ntest_command=foo $LISTOPT $IDLIST\ntest_id_list_default=whoo yea\n'
             'test_list_option=--list\n')
